--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -35,16 +35,25 @@ section {
   padding: 100px 0;
 }
 
-.heading {
+h2.heading {
   text-align: center;
   text-transform: uppercase;
   display: table;
   margin: 0 auto;
-  padding-bottom: 90px;
-  .sub-heading {
-    font-size: 16px;
-    font-weight: 300;
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin: 2rem auto 0;
   }
+}
+
+h3.sub-heading {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 300;
+  margin: 0 0 3rem;
 }
 
 h2 {
@@ -53,6 +62,11 @@ h2 {
   font-weight: bold;
   position: relative;
   padding-bottom: 16px;
+}
+
+.blog h3.sub-heading,
+.contact h3.sub-heading {
+  color: $gray-text-2;
 }
 
 .form-btn {
